[package]
name = "whirlpool"
version = "0.7.0"
publish = false
edition = "2021"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
devnet = []
mainnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
no-log-ix-name = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", package = "anchor-lang", rev = "fa381028b6c28ab865644ac9ab02948ba30a89a2", features = ["init-if-needed"] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", package = "anchor-spl", rev = "fa381028b6c28ab865644ac9ab02948ba30a89a2", features = ["metadata", "memo"] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = { version = "0.9.0" }
spl-token-metadata-interface = { version = "0.6.0" }
solana-program = { version = "2.1.13" }
uint = { version = "=0.9.5", default-features = false }
arrayref = "0.3.9"
borsh09 = { package = "borsh", version = "=0.9.3" }
solana-security-txt = { version = "=1.1.1" }
bytemuck = { version = "1.21.0", features = ["derive", "min_const_generics"] }
num_enum = { version = "=0.7.3" }
bitflags = { version = "=2.9.0" }

[dev-dependencies]
proptest = "=1.5.0"
serde = "1.0.213"
serde_json = "1.0.132"

[dev-dependencies.serde_with]
version = "=2.3.3"
features = ["json"]
